[package]
name = "asciime"
version = "0.1.0"
edition = "2021"
authors = ["Wolf Honoré <wolfhonore@gmail.com>"]
description = "An ASCII art webcam filter."
repository = "https://github.com/whonore/asciime"
license = "MIT"
keywords = ["webcam filter", "ascii art", "v4l2"]
categories = ["command-line-utilities", "multimedia::video"]

[lib]
name = "asciime_filter"

[[bin]]
name = "asciime"

[dependencies]
anyhow = "1.0.57"
itertools = "0.10.3"
rusttype = "0.9.2"
v4l = "0.12.1"
