[package]
name = "asciime"
version = "0.1.0"
edition = "2021"
authors = ["Wolf Honoré <wolfhonore@gmail.com>"]
description = "An ASCII art webcam filter."
repository = "https://github.com/whonore/asciime"
license = "MIT"
keywords = ["webcam filter", "ascii art", "v4l2"]
categories = ["command-line-utilities", "multimedia::video"]

[lib]
name = "asciime_filter"

[[bin]]
name = "asciime"

[dependencies]
anyhow = "1.0.57"
clap = { version = "4.5.6", features = ["derive"] }
crossterm = "0.27.0"
itertools = "0.13.0"
rayon = "1.5.2"
rusttype = "0.9.2"
tui = "0.19.0"
v4l = "0.14.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "ascii_filter"
harness = false
